# l3jax

./: .gitignore  pyproject.toml  setup.py
l3jax/: llama3.1_train.ipynb  llama3.1_train.py
l3jax/trainer_engine/: base_trainer.py  checkpoint_lib.py  config_lib.py  convert_to_hf.py  llama_model.py  setup.py  training_pipeline.py  utils.py
llama3/: llama3.1_train.ipynb
llama3/trainer_engine/: base_trainer.py
