[tool.poetry]
name = "l3jax"
version = "1.0.0"
description = "llama3jax"
authors = [
  "Nithin <nithin2602@gmail.com>",
]
python-version = "3.10"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
absl-py = "^2.1.0"
sentencepiece = "^0.1.99"
flax = ">=0.8"
pytest = {version = "^8.0.0", optional = true}

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"