[tool.poetry]
name = "l3jax"
version = "1.0.0"
description = "llama3jax"
authors = [
  "Nithin <nithin2602@gmail.com>",
]
python = "^3.10"
packages = [{include = "l3jax"}]

[tool.poetry.dependencies]
python = "^3.10"
flax = ">=0.8"
jax = "^0.4.0"
jaxlib = "^0.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"